--- a/calico.yaml
+++ b/calico.yaml
@@ -30,6 +30,9 @@ data:
           "mtu": __CNI_MTU__,
           "ipam": {
               "type": "calico-ipam"
+              "assign_ipv4": "false",
+              "assign_ipv6": "true",
+              "ipv6_pools": ["fd00::1:0/112", "default-ipv6-ippool"]
           },
           "policy": {
               "type": "k8s"
@@ -595,8 +598,12 @@ spec:
             # The default IPv4 pool to create on startup if none exists. Pod IPs will be
             # chosen from this range. Changing this value after installation will have
             # no effect. This should fall within `--cluster-cidr`.
-            - name: CALICO_IPV4POOL_CIDR
-              value: "192.168.0.0/16"
+#            - name: CALICO_IPV4POOL_CIDR
+#              value: "192.168.0.0/16"
+            - name: CALICO_IPV6POOL_CIDR
+              value: "fd00::0:0/96"
+            - name: IP6
+              value: "autodetect"
             # Disable file logging so `kubectl logs` works.
             - name: CALICO_DISABLE_FILE_LOGGING
               value: "true"
@@ -605,7 +612,7 @@ spec:
               value: "ACCEPT"
             # Disable IPv6 on Kubernetes.
             - name: FELIX_IPV6SUPPORT
-              value: "false"
+              value: "true"
             # Set Felix logging to "info"
             - name: FELIX_LOGSEVERITYSCREEN
               value: "info"
